--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                     <div class="player-info">
                         <h2 class="player name">Neymar jr</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Neymar came into prominence at Santos, where he made his professional debut aged 17. he
+                                won the continental treble of La Liga, the Copa del Rey, and the UEFA Champions League,
+                                and
+                                finished third for the FIFA Ballon d'Or in 2015</p>
                         </div>
                     </div>
                 </div>
@@ -48,8 +50,9 @@
                     <div class="player-info">
                         <h2 class="player name">Lionel Messi</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Born and raised in central Argentina, Messi relocated to Spain to join Barcelona at age
+                                13, for whom he made his competitive debut aged 17 in October 2004. He established
+                                himself as an integral player for the club within the next three years, </p>
                         </div>
                     </div>
                 </div>
@@ -58,8 +61,9 @@
                     <div class="player-info">
                         <h2 class="player name">Cristiano Ronaldo</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Born and raised in Madeira, Ronaldo began his senior club career playing for Sporting CP,
+                                before signing with Manchester United in 2003, aged 18. After winning the FA Cup in his
+                                first season, he helped United win three successive Premier League titles</p>
                         </div>
                     </div>
                 </div>
@@ -68,8 +72,8 @@
                     <div class="player-info">
                         <h2 class="player name">Paulo Dybala</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Dybala began his club career in 2011 with Instituto de Córdoba; he joined Palermo in
+                                2012, at age 18, in a transfer worth a reported €8 million,</p>
                         </div>
                     </div>
                 </div>
@@ -78,8 +82,9 @@
                     <div class="player-info">
                         <h2 class="player name">Mesut Ozil</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Born and raised in Gelsenkirchen, Özil began his senior club career playing for hometown
+                                club Schalke 04, before signing with Werder Bremen in 2008, aged 19. After winning the
+                                DFB-Pokal in his first season,</p>
                         </div>
                     </div>
                 </div>
@@ -88,8 +93,9 @@
                     <div class="player-info">
                         <h2 class="player name">Mauro Icardi</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Icardi began his footballing career at La Masia, the youth system of La Liga club
+                                Barcelona, before moving to Serie A club Sampdoria to begin his professional career in
+                                2012</p>
                         </div>
                     </div>
                 </div>
@@ -98,8 +104,9 @@
                     <div class="player-info">
                         <h2 class="player name">Di maria</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Di María began his career with Rosario Central, but came into prominence at Benfica after
+                                signing for the club in 2007, aged 19. He helped Benfica win a Primeira Liga
+                                championship</p>
                         </div>
                     </div>
                 </div>
@@ -108,8 +115,8 @@
                     <div class="player-info">
                         <h2 class="player name">Kylian Mbappe</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in
+                                2015, aged 16. With them, he won a Ligue 1 title, Ligue 1 Young Player of the Year,</p>
                         </div>
                     </div>
                 </div>
@@ -118,8 +125,8 @@
                     <div class="player-info">
                         <h2 class="player name">Mohamed Salah</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Salah started his senior career with Egyptian club Al Mokawloon, departing shortly
+                                thereafter to join Swiss side Basel for an undisclosed fee. In Switzerland,</p>
                         </div>
                     </div>
                 </div>
@@ -128,8 +135,8 @@
                     <div class="player-info">
                         <h2 class="player name">Harry Kane</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Born and raised in the London borough of Waltham Forest, Kane began his career at
+                                Tottenham Hotspur, where, after fast progression through the team's youth academy, </p>
                         </div>
                     </div>
                 </div>
@@ -138,8 +145,8 @@
                     <div class="player-info">
                         <h2 class="player name">Kevin De Bruyne</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>De Bruyne began his career at Genk, where he was a regular player when they won the
+                                2010–11 Belgian Pro League. In 2012, he joined English club Chelsea,</p>
                         </div>
                     </div>
                 </div>
@@ -148,8 +155,8 @@
                     <div class="player-info">
                         <h2 class="player name">Philippe Coutinho</h2>
                         <div class="player-details">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, recusandae.
-                                Doloremque itaque cum deserunt possimus sed eaque, veniam officiis quis!</p>
+                            <p>Born and raised in Rio de Janeiro, Coutinho showed prodigious talent and excelled in
+                                Vasco da Gama's youth system. He was signed by Italian club Inter Milan</p>
                         </div>
                     </div>
                 </div>
